Updating client tsconfig

--- a/rest-api-app/packages/client/tsconfig.json
+++ b/rest-api-app/packages/client/tsconfig.json
@@ -9,7 +9,8 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"composite": true
+		"composite": true,
+		"outDir": "./dist"
 	},
 	"references": [
 		{
