--- a/grpc-api-app/packages/apiTypes/package.json
+++ b/grpc-api-app/packages/apiTypes/package.json
@@ -3,14 +3,23 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "types": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "gen": "buf generate"
+  },
   "dependencies": {
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@bufbuild/buf": "^1.14.0",
+    "grpc_tools_node_protoc_ts": "^5.3.3",
+    "grpc-tools": "^1.12.4",
+    "ts-proto": "^1.139.0"
   }
 }
