--- a/grpc-api-app/packages/apiTypes/tsconfig.json
+++ b/grpc-api-app/packages/apiTypes/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "esnext",
     "module": "node16",
     "outDir": "./dist",
-    "declaration": true
+    "allowJs": true,
+    "esModuleInterop": true
   },
   "include": ["src/**/*"]
 }
