Attempts client integration (unsuccessfully)

--- a/grpc-api-app/packages/apiTypes/package.json
+++ b/grpc-api-app/packages/apiTypes/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "exports": "./dist/index.js",
+  "module": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
