--- a/grpc-api-app/packages/api/package.json
+++ b/grpc-api-app/packages/api/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@bufbuild/connect-node": "^0.7.0",
     "@grpc/grpc-js": "^1.8.8",
     "@types/url-join": "^4.0.1",
     "cors": "^2.8.5",
