--- a/grpc-api-app/packages/apiTypes/package.json
+++ b/grpc-api-app/packages/apiTypes/package.json
@@ -2,22 +2,27 @@
   "name": "@grpc-vs-rest/api-types",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "exports": "./dist/index.js",
-  "module": "module",
+  "files": [
+    "dist"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
   "scripts": {
     "gen": "buf generate"
   },
-  "dependencies": {
-    "typescript": "^4.9.5"
-  },
   "devDependencies": {
     "@bufbuild/buf": "^1.14.0",
+    "@bufbuild/protoc-gen-connect-web": "^0.7.0",
+    "@bufbuild/protoc-gen-es": "^1.0.0",
     "grpc_tools_node_protoc_ts": "^5.3.3",
     "grpc-tools": "^1.12.4",
-    "ts-proto": "^1.139.0"
+    "protoc-gen-ts": "^0.8.5",
+    "ts-proto": "^1.139.0",
+    "typescript": "^5.0.0-dev.20230211"
   }
 }
