Transpiling esm/cjs modules for apiTypes.

--- a/grpc-api-app/packages/apiTypes/package.json
+++ b/grpc-api-app/packages/apiTypes/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "gen": "buf generate"
+    "gen": "buf generate",
+    "clean": "rm -rf ./dist/cjs/* ./dist/esm/* ./dist/types/*",
+    "build": "npm run build:cjs && npm run build:esm+types",
+    "build:cjs": "../../node_modules/typescript/bin/tsc --project tsconfig.json --module commonjs --outDir ./dist/cjs && echo >./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
+    "build:esm+types": "../../node_modules/typescript/bin/tsc --project tsconfig.json --module ES2015 --outDir ./dist/esm --declaration --declarationDir ./dist/types"
   },
   "devDependencies": {
     "@bufbuild/buf": "^1.14.0",
@@ -24,5 +28,8 @@
     "protoc-gen-ts": "^0.8.5",
     "ts-proto": "^1.139.0",
     "typescript": "^5.0.0-dev.20230211"
+  },
+  "dependencies": {
+    "@bufbuild/protobuf": "^1.0.0"
   }
 }
