--- a/grpc-api-app/packages/api/package.json
+++ b/grpc-api-app/packages/api/package.json
@@ -2,8 +2,17 @@
   "name": "@grpc-vs-rest/api",
   "version": "1.0.0",
   "description": "",
-  "exports": "./dist/index.js",
+  "main": "./dist/cjs/index.js",
   "type": "module",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    "import": "./dist/esm/index.js",
+    "require": "./dist/cjs/index.js",
+    "types": "./dist/types/index.d.ts"
+  },
+  "files": [
+    "dist/**/"
+  ],
   "scripts": {
     "lint": "eslint .",
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
