More package cleanup; removing unneeded deps

--- a/rest-api-app/packages/api/package.json
+++ b/rest-api-app/packages/api/package.json
@@ -2,7 +2,7 @@
   "name": "@grpc-vs-rest/api",
   "version": "1.0.0",
   "description": "",
-  "exports": "./dist/index.js",
+  "main": "./dist/index.js",
   "type": "module",
   "scripts": {
     "lint": "eslint .",
