--- a/grpc-api-app/packages/api/package.json
+++ b/grpc-api-app/packages/api/package.json
@@ -17,13 +17,9 @@
   "dependencies": {
     "@bufbuild/connect-node": "^0.7.0",
     "@grpc/grpc-js": "^1.8.8",
-    "@types/url-join": "^4.0.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "lowdb": "^5.1.0",
-    "url-join": "^5.0.0"
+    "lowdb": "^5.1.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
