Updating package names and configs.

--- a/grpc-api-app/package.json
+++ b/grpc-api-app/package.json
@@ -2,7 +2,7 @@
   "name": "@grpc-vs-rest/rest-api-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "workspaces": [
     "packages/*"
   ],
