--- a/grpc-api-app/packages/client/package.json
+++ b/grpc-api-app/packages/client/package.json
@@ -18,7 +18,6 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@esbuild/darwin-arm64": "^0.17.8",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -31,6 +30,9 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0",
 		"vitest": "^0.25.3"
+	},
+	"optionalDependencies": {
+		"@esbuild/darwin-arm64": "^0.17.8"
 	},
 	"type": "module",
 	"dependencies": {
