--- a/rest-api-app/package.json
+++ b/rest-api-app/package.json
@@ -7,7 +7,9 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "tsc --build"
+    "build:apiTypes": "cd packages/apiTypes && npm run build",
+    "dev:api": "cd packages/api && npm run dev",
+    "dev:client": "cd packages/client && npm run dev"
   },
   "keywords": [],
   "author": "",
