--- a/grpc-rest-app/packages/client/package.json
+++ b/grpc-rest-app/packages/client/package.json
@@ -36,9 +36,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@bufbuild/connect-node": "^0.7.0",
-		"@bufbuild/connect-web": "^0.7.0",
-		"@grpc-vs-rest/api-types": "*",
-		"@grpc/grpc-js": "^1.8.8"
+		"@grpc-vs-rest/api-types": "*"
 	}
 }
