--- a/rest-api-app/packages/client/.prettierrc
+++ b/rest-api-app/packages/client/.prettierrc
@@ -3,7 +3,20 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"plugins": [
+		"prettier-plugin-svelte",
+		"prettier-plugin-organize-imports",
+		"prettier-plugin-jsdoc"
+	],
+	"pluginSearchDirs": [
+		"../../node_modules"
+	],
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
