Updating docker config to support all platforms.

--- a/grpc-rest-app/packages/proxy/docker-compose.yaml
+++ b/grpc-rest-app/packages/proxy/docker-compose.yaml
@@ -2,10 +2,11 @@ version: '3'
 services:
   envoy:
     image: envoyproxy/envoy-dev:c7c462fa4c10b7a71edd57ab2029619e752f4b2b
-    network_mode: "host"
     ports:
       - "9901:9901"
       - "8080:8080"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     volumes:
       - ./envoy.yaml:/etc/envoy/envoy.yaml
       - ./contacts.pb:/tmp/envoy/contacts.pb
