Updating docker config; adds a debug note in envoy conf

--- a/grpc-rest-app/packages/proxy/docker-compose.yaml
+++ b/grpc-rest-app/packages/proxy/docker-compose.yaml
@@ -9,4 +9,5 @@ services:
       - "host.docker.internal:host-gateway"
     volumes:
       - ./envoy.yaml:/etc/envoy/envoy.yaml
-      - ./contacts.pb:/tmp/envoy/contacts.pb
+      - ./tmp/envoy/contacts.pb:/tmp/envoy/contacts.pb
+
