--- a/grpc-rest-app/packages/api/package.json
+++ b/grpc-rest-app/packages/api/package.json
@@ -9,14 +9,14 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
     "build": "npx tsc",
     "start": "node dist/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@bufbuild/connect-node": "^0.7.0",
-    "@grpc/grpc-js": "^1.8.8",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "lowdb": "^5.1.0"
@@ -25,8 +25,10 @@
     "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "concurrently": "^7.6.0",
@@ -36,10 +38,14 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.2.1",
     "grpc-tools": "^1.12.4",
+    "jest": "^29.4.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "prettier-plugin-jsdoc": "^0.4.2",
     "prettier-plugin-organize-imports": "^3.1.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
