--- a/grpc-rest-app/packages/proxy/envoy.yaml
+++ b/grpc-rest-app/packages/proxy/envoy.yaml
@@ -68,5 +68,5 @@ static_resources:
               - endpoint:
                   address:
                     socket_address:
-                      address: host.docker.internal
+                      address: 0.0.0.0
                       port_value: 9090
