--- a/grpc-api-app/package.json
+++ b/grpc-api-app/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "@grpc-vs-rest/api-types": "*",
+    "@grpc/grpc-js": "^1.8.9",
+    "@protobuf-ts/plugin": "^2.8.2",
     "typescript": "^4.9.5"
   }
 }
