--- a/grpc-api-app/packages/apiTypes/buf.gen.yaml
+++ b/grpc-api-app/packages/apiTypes/buf.gen.yaml
@@ -1,11 +1,7 @@
 # /proto/buf.gen.yaml
 version: v1
 plugins:
-  - name: es
-    path: ../../node_modules/.bin/protoc-gen-es
-    opt: target=ts
-    out: src
-  - name: connect-web
-    path: ../../node_modules/.bin/protoc-gen-connect-web
-    opt: target=ts
-    out: src
+  - name: ts
+    out: src/
+    opt: generate_dependencies,long_type_string,server_grpc1,client_grpc1
+    path: ../../node_modules/@protobuf-ts/plugin/bin/protoc-gen-ts
