Switch rpc generation to protobuf-ts and grpc.

--- a/grpc-rest-app/packages/apiTypes/package.json
+++ b/grpc-rest-app/packages/apiTypes/package.json
@@ -21,7 +21,7 @@
     "clean": "rm -rf ./dist/cjs/* ./dist/esm/* ./dist/types/*",
     "build": "npm run gen && npm run build:cjs && npm run build:esm+types && mkdir -p ../proxy/tmp/envoy && buf build -o ../proxy/tmp/envoy/contacts.pb --as-file-descriptor-set",
     "build:cjs": "../../node_modules/typescript/bin/tsc --project tsconfig.json --module commonjs --outDir ./dist/cjs && echo >./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
-    "build:esm+types": "../../node_modules/typescript/bin/tsc --project tsconfig.json --module esnext --outDir ./dist/esm --declaration --declarationDir ./dist/types"
+    "build:esm+types": "../../node_modules/typescript/bin/tsc --project tsconfig.json --module esnext --moduleResolution node --outDir ./dist/esm --declaration --declarationDir ./dist/types"
   },
   "devDependencies": {
     "@bufbuild/buf": "^1.14.0",
@@ -31,6 +31,8 @@
   },
   "dependencies": {
     "@bufbuild/protobuf": "^1.0.0",
+    "@grpc/grpc-js": "^1.8.9",
+    "@protobuf-ts/plugin": "^2.8.2",
     "googleapis": "^111.0.0"
   }
 }
