--- a/grpc-rest-app/packages/api/package.json
+++ b/grpc-rest-app/packages/api/package.json
@@ -10,7 +10,7 @@
     "build": "npx tsc",
     "start": "node dist/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\"",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
+    "test": "NODE_OPTIONS=--experimental-vm-modules DOTENV_CONFIG_PATH=.env.test jest --watch --setupFiles dotenv/config"
   },
   "keywords": [],
   "author": "",
