--- a/grpc-api-app/packages/apiTypes/buf.gen.yaml
+++ b/grpc-api-app/packages/apiTypes/buf.gen.yaml
@@ -3,5 +3,4 @@ version: v1
 plugins:
   - name: ts
     out: src/
-    opt: generate_dependencies,long_type_string,server_grpc1,client_grpc1
-    path: ../../node_modules/@protobuf-ts/plugin/bin/protoc-gen-ts
+    opt: generate_dependencies,long_type_string,server_generic,client_generic
