--- a/grpc-api-app/packages/client/package.json
+++ b/grpc-api-app/packages/client/package.json
@@ -37,6 +37,7 @@
 	"type": "module",
 	"dependencies": {
 		"@grpc-vs-rest/api-types": "*",
-		"@grpc/grpc-js": "^1.8.9"
+		"@grpc/grpc-js": "^1.8.9",
+		"@protobuf-ts/grpc-transport": "^2.8.2"
 	}
 }
