--- a/grpc-rest-app/.eslintignore
+++ b/grpc-rest-app/.eslintignore
@@ -7,6 +7,9 @@ node_modules
 .env.*
 !.env.example
 
+# Ignore generated file, linter messes it up.
+packages/apiTypes/src/google/protobuf/descriptor.ts
+
 # Ignore files for PNPM, NPM and YARN
 pnpm-lock.yaml
 package-lock.json
