Minimizing relative paths in scripts for win compat.

--- a/rest-api-app/packages/apiTypes/package.json
+++ b/rest-api-app/packages/apiTypes/package.json
@@ -20,8 +20,8 @@
     "gen": "buf generate",
     "clean": "rm -rf ./dist/cjs/* ./dist/esm/* ./dist/types/*",
     "build": "npm run build:cjs && npm run build:esm+types",
-    "build:cjs": "../../node_modules/typescript/bin/tsc --project tsconfig.json --module commonjs --outDir ./dist/cjs && echo >./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
-    "build:esm+types": "../../node_modules/typescript/bin/tsc --project tsconfig.json --module esnext --outDir ./dist/esm --declaration --declarationDir ./dist/types"
+    "build:cjs": "tsc --project tsconfig.json --module commonjs --outDir ./dist/cjs && echo >./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
+    "build:esm+types": "tsc --project tsconfig.json --module esnext --outDir ./dist/esm --declaration --declarationDir ./dist/types"
   },
   "devDependencies": {
     "typescript": "^5.0.0-dev.20230211"
