--- a/grpc-api-app/packages/api/package.json
+++ b/grpc-api-app/packages/api/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.8.9",
     "@protobuf-ts/grpc-backend": "^2.8.2",
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "lowdb": "^5.1.0"
@@ -28,7 +29,7 @@
     "concurrently": "^7.6.0",
     "grpc-tools": "^1.12.4",
     "jest": "^29.4.3",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.0",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
