--- a/rest-api-app/package.json
+++ b/rest-api-app/package.json
@@ -17,7 +17,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/lodash": "^4.14.191",
@@ -37,7 +37,7 @@
     "prettier-plugin-svelte": "^2.8.1"
   },
   "dependencies": {
-    "typescript": "^4.9.5",
-    "@grpc-vs-rest/api-types": "*"
+    "@grpc-vs-rest/api-types": "*",
+    "typescript": "^4.9.5"
   }
 }
