--- a/rest-api-app/packages/api/package.json
+++ b/rest-api-app/packages/api/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@trivago/prettier-plugin-sort-imports": "4.3.0",
     "@types/url-join": "^4.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -25,7 +26,7 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "jest": "^29.4.3",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.1.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
